--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,10 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
   
-<!-- 
+
     <filter>
     	<filter-name>encode</filter-name>
-    	<filter-class>org.springframwork.web.filter.CharacterEncodingFilter</filter-class>
+    	<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     	<init-param>
     		<param-name>encoding</param-name>
     		<param-value>UTF-8</param-value>
@@ -20,7 +20,7 @@
     </filter-mapping>
      
     
-     -->
+   
 
 
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
